# Product-Category-Prediction-Based-on-Content

./: Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt  run_service.sh
src/: main.py  predict.py  train_model.py
